# el_shop_project

./: config.py  pyproject.toml
homework-1/: main.py
homework-2/: main.py
homework-6/: main.py
src/: broken_items.csv  item.py  keyboard.py  phone.py  test_item.py
tests/: test_item.py  test_item_OLD.py  test_keyboard.py  test_phone.py
